# ros_node_configuration

./: CMakeLists.txt  README.md  package.xml
config/: node_a_config.yaml  node_b_config.yaml
include/ros_node_configuration/: devices_node.h
include/ros_node_configuration/device/: device.h  device_factory.h  device_manager.h  serial_device.h  types.h
include/ros_node_configuration/device/utils/: serial_handler.h
launch/: bringup.launch
src/: devices_node.cpp
src/device/: serial_device.cpp
